fixed text alignment in logo

--- a/src/index.css
+++ b/src/index.css
@@ -349,5 +349,5 @@ h1 {
 
 #logo > span {
   color: #f8c7cc;
-  margin: auto;
+  margin: 2.5px;
 }
